--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -192,10 +192,11 @@
         - "碎甲|200|1"
     drop:
         - "铜币:200000:350000:1"
-        - "虚空石:32:48:1"
+        - "虚空石:16:24:1"
         - "深渊细胞:7:11:1"
         - "猎魂鲨牙:3:4:1"
-        - "幻妖龙吟:1:1:0.35"
+        - "幻妖龙吟:1:1:0.25"
+        - "大比目鱼炮:1:1:0.25"
 噬魂怪:
     soundDamaged: entity.hit.flesh
     drop:
