--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/menus.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/menus.yml
@@ -2879,8 +2879,8 @@ bossCLMTS:
             - §r至尊灾难射出加速的斩魂幻锋
             - §r至尊灾祸射出硫火碎魂拳
             - §r一开始，两者均单发射出弹幕
-            - §r生命值降至75%时发射频率增加
-            - §r生命值降至50%时每四次攻击发射一次弹幕墙
+            - §r生命值降至70%时发射频率增加
+            - §r生命值降至40%时每四次攻击发射一次弹幕墙
         attack3:
             row: 2
             col: 3
@@ -2904,12 +2904,12 @@ bossCLMTS:
             col: 5
             name: §r[信息] 攻击顺序-至尊灾厄
             lore:
-            - §r硫火飞弹x2-深渊亡魂-深渊炙炎x2-冲刺x4
-            - §r深渊炙炎x2-深渊亡魂-硫火飞弹x2-冲刺x2
-            - §r硫火飞弹x2-深渊亡魂-深渊炙炎x4-深渊亡魂
-            - §r冲刺x2-硫火飞弹x2-深渊炙炎x4-冲刺x4
-            - §r硫火飞弹x2-冲刺x2-硫火飞弹x2-冲刺x2-硫火飞弹x2
-            - §r在生命值低于45%时，冲刺的次数减半，硫火飞弹额外发射一轮
+            - §r硫火飞弹x3-深渊亡魂-深渊炙炎x2-冲刺x4
+            - §r深渊炙炎x2-深渊亡魂-硫火飞弹x3-冲刺x2
+            - §r硫火飞弹x3-深渊亡魂-深渊炙炎x4-深渊亡魂
+            - §r冲刺x2-硫火飞弹x3-深渊炙炎x4-冲刺x4
+            - §r硫火飞弹x3-冲刺x2-硫火飞弹x3-冲刺x2-硫火飞弹x3
+            - §r在生命值低于45%时，冲刺的次数减半，硫火飞弹减少一轮
         tutorial1:
             row: 3
             col: 1
@@ -2922,6 +2922,8 @@ bossCLMTS:
             - §r保持垂直移动以避免被深渊炙炎弹幕贴脸
             - §r常态攻击的手短较为单一且相对容易，可考虑在常态攻击时恢复生命
             - §r兄弟阶段初期同理，可暂缓攻击BOSS以等待状态恢复
+            - §r尽量避免双兄弟同时进入残血状态，这会导致弹幕过多
+            - §r不要一昧地远离冲刺方向，可能导致下次冲刺过后的技能无法躲避
         back:
             row: 5
             col: 4
