--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/menus.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/menus.yml
@@ -483,7 +483,7 @@ bossEOC:
             - §r钓鱼获得的跳跃之瓶可以在此时期大幅提供机动性
             - §r在夜幕降临（BGM改变）时开始准备挑战BOSS以保证时间充足
             - §r治疗药水与增益药水可以进一步降低难度
-            - §r尝试水平冲刺开始前起跳；若时机正确则无需机动饰品亦可躲避此攻击
+            - §r尝试在冲刺开始前起跳，通过下落躲避冲刺
         back:
             row: 5
             col: 4
